# mempack

./: CHANGELOG.md  LICENSE  README.md  cabal.project  mempack.cabal  stack-coveralls.yaml  stack.ghc-8.10.7.yaml  stack.ghc-8.6.5.yaml  stack.ghc-8.8.4.yaml  stack.ghc-9.0.2.yaml  stack.ghc-9.2.8.yaml  stack.ghc-9.4.8.yaml  stack.ghc-9.6.7.yaml  stack.yaml
.github/workflows/: CI.yml  haskell.yaml
bench/: Bench.hs
src/Data/: MemPack.hs
src/Data/MemPack/: Buffer.hs  Endian.hs  Error.hs
tests/: Main.hs
tests/Test/: Common.hs  MemPackSpec.hs
