name:                mempack
version:             0.2.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/mempack#readme>
homepage:            https://github.com/lehins/mempack
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2024-2025 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.2
                   , GHC == 9.12.2

library
  hs-source-dirs:      src
  exposed-modules:     Data.MemPack
                     , Data.MemPack.Buffer
                     , Data.MemPack.Error

  other-modules:
  build-depends:       base >=4.12 && <5
                     , bytestring
                     , FailT
                     , primitive >=0.6.4
                     , mtl
                     , text
                     , vector >=0.10.12
  if !impl(ghc >= 9.4)
    build-depends:     data-array-byte
  if !impl(ghc >= 9.0)
    build-depends:     integer-gmp

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

-- test-suite tests
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     tests
--   main-is:            Main.hs
--   other-modules:      Test.Common
--                     , Test.MemPackSpec
--   build-depends:      base
--                     , bytestring
--                     , FailT
--                     , hspec
--                     , mempack
--                     , mtl
--                     , primitive
--                     , QuickCheck
--                     , random >=1.2.1
--                     , text
--                     , vector
--   if !impl(ghc >= 9.4)
--     build-depends:     data-array-byte

--   default-language:   Haskell2010
--   ghc-options:        -Wall
--                       -Wincomplete-record-updates
--                       -Wincomplete-uni-patterns
--                       -Wredundant-constraints
--                       -fno-warn-orphans
--                       -threaded
--                       -with-rtsopts=-N2

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
                       -with-rtsopts=-N
  build-depends:       base
                     -- , avro >= 0.5.1
                     -- , binary
                     , bytestring
                     -- , cereal
                     , criterion
                     -- , flat
                     , mempack
                     , primitive
                     -- , serialise
                     -- , store
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/mempack
